Update jumbotron text, test mobile hit commit

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<div class="container-fluid">
 							<br />
 
-							<h3>while (programmer.has_coffee) {<br />programmer.codes();}</h3>
+							<h3>while (programmer.HasCoffee) {<br />programmer.WritesCode();}</h3>
 						
 						</div>
 					</div>
