Update color scheme and jumbotron text.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	  	<!-- Page Content -->
 	  		<!-- <div class="container">  rem for testing -->
 		    	<!-- Navigation -->
-					<nav class="navbar navbar-toggleable-sm fixed-top navbar-default" style="background-color: #003399;">
+					<nav class="navbar navbar-toggleable-sm fixed-top navbar-inverse">
 						<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -52,11 +52,9 @@
 		    	<!-- /Navigation -->
 
 		    	<!-- Jumbotron -->
-		    		<div class="jumbotron container-fluid hidden-xs px-0 mx-0 d-none d-sm-block" style="background-image: url(./images/computer-and-coffee.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center; padding-top: 20%; padding-bottom: 20%;">
-						<div class="container-fluid">
-							<br />
-
-							<h3>while (programmer.HasCoffee) {<br />programmer.WritesCode();}</h3>
+		    		<div class="jumbotron container-fluid px-0 mx-0" style="background-image: url(./images/computer-and-coffee.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center; padding-top: 20%; padding-bottom: 20%;">
+						<div class="center">
+							while (programmer.HasCoffee) {<br />programmer.WritesCode();}
 						
 						</div>
 					</div>
