fix typo on css image.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<!-- PHOTO CONTAINER 2 -->
 							<div class="photo-container">
 								<div class="photo">
-									<img src="./images/CSS3_logo_128.png" alt="">
+									<img src="./images/CSS3_Logo_128.png" alt="">
 									<div class="photo-overlay">
 										<h3>Click to Enlarge</h3>
 										<p class="overlay-text">Texty text about stuff</p>
