Update skill card text, format.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
 								<div class="photo">
 									<img src="./images/HTML5_logo_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">HTML defines the structure and content of webpages.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://www.w3schools.com/html" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
 									</div>
+
 								</div>
 							</div>
 							<!-- END PHOTO CONTAINER 1 -->
@@ -83,8 +89,14 @@
 								<div class="photo">
 									<img src="./images/CSS3_Logo_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">CSS displays your content to stand out from other webpages.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://www.w3schools.com/css" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -93,10 +105,16 @@
 							<!-- PHOTO CONTAINER 3 -->
 							<div class="photo-container">
 								<div class="photo">
-									<img src="./images/JS_icon_256.png" alt="">
+									<img src="./images/JS_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">JavaScript makes the web move, making webpages dynamic and bringing them to life.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://www.w3schools.com/js" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -107,8 +125,13 @@
 								<div class="photo">
 									<img src="./images/SQL_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">Data drives the modern world and modern business. Manage and query it with SQL.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://www.w3schools.com/sql" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -119,8 +142,13 @@
 								<div class="photo">
 									<img src="./images/VS_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">Visual Studio: Microsoft's IDE for application development.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://www.visualstudio.com/" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -131,8 +159,13 @@
 								<div class="photo">
 									<img src="./images/Excel_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">Microsoft Excel: Data, writ small.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://products.office.com/en-us/excel" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -143,8 +176,13 @@
 								<div class="photo">
 									<img src="./images/Word_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<div class="overlay-text-box">
+											<p class="overlay-text">Microsoft Word: Sometimes, we just need clear, standard text to communicate with each other.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://products.office.com/en-us/word" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -155,8 +193,14 @@
 								<div class="photo">
 									<img src="./images/GitHub_Logo_White.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										
+										<h5>GitHub (Version Control)</h5>
+										<p class="overlay-text">Remote repository management for change tracking and team development.</p>
+										<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+											<a href="https://products.office.com/en-us/word" class="btn btn-secondary">Learn More</a>
+											<a href="#contact" class="btn btn-info">Contact Me!</a>
+										</div>
+										
 									</div>
 								</div>
 							</div>
@@ -167,8 +211,12 @@
 								<div class="photo">
 									<img src="./images/Unity_icon_128.png" alt="">
 									<div class="photo-overlay">
-										<h3>Click to Enlarge</h3>
-										<p class="overlay-text">Texty text about stuff</p>
+										<h3>Unity</h3>
+										<p class="overlay-text">Game Development Platform.</p>
+										<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://products.office.com/en-us/word" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
 									</div>
 								</div>
 							</div>
