Add linkedin icon linked to my linkedin page on main landing page.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 						while (programmer.HasCoffee) {<br />programmer.WritesCode();}
 					
 					</div>
+
+					<div class="contactme">
+						<a href="https://www.linkedin.com/in/jeffrey-hubbard">
+							<img src="./images/Linkedin_icon_128.png" alt="">
+						</a>
+					</div>
+
 				</div>
 	    	<!-- /Jumbotron -->
 
@@ -241,7 +248,9 @@
 	    	<!-- /Experience -->
 
 	    	<!-- Contact -->
-
+	    		<section id="contact" class="navigation-header">
+	    			
+	    		</section>
 	    	<!-- /Contact -->
 
 	    	<!-- Footer -->
