Restore main page linkedin link by removing z-index layering of parent elements.

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 	    					</div>
 	    					<div class="card card-inverse" style="background-color: #424342;">
 	    						<div class="card-body">
-	    							<h5 class="card-title" id="contactme-text">Connect with me!</h5>
+	    							<h5 class="card-title" id="contact-text">Connect with me!</h5>
 	    							<p class="card-text"></p>
 	    						</div>
 	    					</div>
