Change filetype to match png files

--- a/liveproject.html
+++ b/liveproject.html
@@ -98,7 +98,7 @@
 	    		<div class="container-fluid pb-4 px-4">
 	    			<div class="row section-row">
 		    			<div class="col-md-4 image-card">
-		    				<img src="./images/myrole.png">
+		    				<img src="./images/myrole.PNG">
 		    			</div>
 		    			<div class="col-md-8 image-card">
 		    				<h2 class="customheader">My Role</h2>
@@ -122,7 +122,7 @@
 		    				<a class="btn btn-secondary" href="https://github.com/Jeffrey-Hubbard/Tech-Academy-Projects/tree/master/Live-Project-Snippets/Models-ViewModels" role="button">View Source Code Snippets and Extended Summary</a>
 		    			</div>
 		    			<div class="col-md-4 image-card">
-		    				<img src="./images/viewmodel.png">
+		    				<img src="./images/viewmodel.PNG">
 		    			</div>
 	    			</div>
 	    		</div>
