Update link to myrole pic

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 								<div class="col-md-4">	
 									<div class="card portfolio-card">
 										<a href="./liveproject.html#schedule">
-											<img class="card-img-top portfolio-card-image" src="./images/myrole.png" alt="Card image cap">
+											<img class="card-img-top portfolio-card-image" src="./images/myrole.PNG" alt="Card image cap">
 										</a>
 										
 										<div class="card-body portfolio-card-body">
