Update internal links from index to LP

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 								</div>
 								<div class="col-md-4">	
 									<div class="card portfolio-card">
-										<a href="./liveproject.html#schedule">
+										<a href="./liveproject.html#calendar">
 											<img class="card-img-top portfolio-card-image" src="./images/calendar.png" alt="Card image cap">
 										</a>
 										
@@ -330,7 +330,7 @@
 								</div>
 								<div class="col-md-4">	
 									<div class="card portfolio-card">
-										<a href="./liveproject.html#schedule">
+										<a href="./liveproject.html#myrole">
 											<img class="card-img-top portfolio-card-image" src="./images/myrole.PNG" alt="Card image cap">
 										</a>
 										
