Add vsts and .net skills

--- a/index.html
+++ b/index.html
@@ -169,6 +169,40 @@
 							</div>
 							<!-- END PHOTO CONTAINER 5 -->
 
+							<!-- PHOTO CONTAINER 5.1 -->
+							<div class="photo-container">
+								<div class="photo">
+									<img src="./images/vsts.png" id="vsts-pic" alt="">
+									<div class="photo-overlay">
+										<div class="overlay-text-box">
+											<p class="overlay-text">Visual Studio Team Services: Agile/Scrum integrated, continuous integration, backlog and version control.</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://visualstudio.microsoft.com/team-services/" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- END PHOTO CONTAINER 5.1 -->
+
+							<!-- PHOTO CONTAINER 5.2 -->
+							<div class="photo-container">
+								<div class="photo">
+									<img src="./images/dotnet.png" alt="">
+									<div class="photo-overlay">
+										<div class="overlay-text-box">
+											<p class="overlay-text">Microsoft .NET Developer Platform</p>
+											<div class="btn-group btn-group-sm more-button" role="group" aria-label="Learn More">
+												<a href="https://visualstudio.microsoft.com/team-services/" class="btn btn-secondary">Learn More</a>
+												<a href="#contact" class="btn btn-info">Contact Me!</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- END PHOTO CONTAINER 5.2 -->
+
 							<!-- PHOTO CONTAINER 6 -->
 							<div class="photo-container">
 								<div class="photo">
