updated 21 game summary

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 										
 										<div class="card-body portfolio-card-body">
 											<h5 class="card-title">Twenty One - a C# console app</h5>
-											<p class="card-text">I created a dynamic view to display, intake and save user schedule information.</p>
+											<p class="card-text">Fully functional game of 21 in a console.</p>
 										</div>
 										<div class="card-footer">
 											<small>C#, Visual Studio</small>
