Removed gameoflife board and js

--- a/gameoflife.html
+++ b/gameoflife.html
@@ -63,11 +63,11 @@
 	    	<!-- /Navigation -->
 
 	    	<!-- Game Board Canvase -->
-	    	<div>
+	    	<!-- <div>
 	    		<canvas id="gameBoard">
 	    			
 	    		</canvas>
-	    	</div>
+	    	</div> -->
 	    	<!-- /Game Board Canvase -->
 
 	    	<!-- Game Board Controls -->
@@ -124,7 +124,7 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
-	    <script src="./js/gameoflife.js"></script>
+	  <!--   <script src="./js/gameoflife.js"></script> -->
 
 	    <script type="text/javascript">
 	    	$(document).ready(function() {
