--- a/coverletter.html
+++ b/coverletter.html
@@ -71,22 +71,22 @@
 	  				<br />
 	  				<br />
 	  				<br />
-	  				<p>July 24, 2018</p>
+	  				<p>July 25, 2018</p>
 	  				<br />
-	  				<p class="hiring manager"></p>
+	  				<p class="hiring manager">Hiring Manager</p>
 	  				<p class="title"></p>
 	  				<br />
-	  				<p class="company name"></p>
-	  				<p class="company location"></p>
+	  				<p class="company name">Beyondsoft Consulting</p>
+	  				<p class="company location">Bellevue, WA</p>
 	  				<br />
 	  				<br />
 	  				<p>Dear Hiring Manager:</p>
 	  				<br />
-	  				<p>I have to admit: I had never heard of Logic 20/20 until I saw a job posting recently on Glassdoor.com</p>
+	  				<p>Thank you for taking the time to review my application for the Web Developer position posted on Indeed.</p>
 	  				<br />
-	  				<p>However, after researching what your company is about, I felt like the match to my own experiences and interests was perfect. Everywhere I have worked and no matter my role, I've always tackled the hardest problems with technical solutions, improving communication, sales, accuracy, and automating repetitive tasks to save key employee time.</p>
+	  				<p>I'm a recent boot camp graduate, passionately persuing a change of careers. While I may not have the 'years' of technical experience, my intense focus and ability to learn new things at lightning speed ensure I am up to the technical task. What sets me apart from others is my background in customer service, sales, and communication. If you're looking for engaged employees, teammates who can communicate and cooperate, who can help and ask for help from others, then you need someone like me.</p>
 	  				<br />
-	  				<p>I bring a rare combination of a sharp, technical mind and excellent speaking and communication skills, and I'd love a career helping you make a difference for your clients, doing work that really helps the world.</p>
+	  				<p>Your technical list of skills is a near perfect match for the majority of my boot camp training and my capstone project, where I implemented the schedule input, storage, and display module for a time and attendance web app, front-to-back and start-to-finish. I'm willing to build any skill, learn any technology, and work on any part of a project as long as I can be a good, contributing team member and develop solutions to client problems.</p>
 	  				<br />
 	  				<p>I would love an opportunity to discuss this position, at your convenience. Thank you for your time, I'm certain you read through many, many such letters, and appreciate that you read through mine as well!</p>
 	  				<br />
