Update cover letter

--- a/coverletter.html
+++ b/coverletter.html
@@ -29,7 +29,7 @@
 	  	<!-- Page Content -->
 	  	<div class="container-fluid">
 	  		<div class="row">
-	  			<div class="col-md-4">
+	  			<div class="col-md-5">
 	  				<p class="nametag">Jeffrey Hubbard</p>
 	  				<p class="titletag">Software Developer</p>
 	  				<br />
@@ -64,7 +64,7 @@
 	  						</p>
 
 	  			</div>
-	  			<div class="col-md-8">
+	  			<div class="col-md-7">
 	  				<br />
 	  				<br />
 	  				<br />
@@ -76,17 +76,16 @@
 	  				<p class="hiring manager">Hiring Manager</p>
 	  				<p class="title"></p>
 	  				<br />
-	  				<p class="company name">Beyondsoft Consulting</p>
-	  				<p class="company location">Bellevue, WA</p>
+	  				<p class="company name">Qualtrics</p>
+	  				<p class="company location">Seattle, WA</p>
 	  				<br />
 	  				<br />
 	  				<p>Dear Hiring Manager:</p>
 	  				<br />
-	  				<p>Thank you for taking the time to review my application for the Web Developer position posted on Indeed.</p>
+	  				<p>Earlier today, I saw an article published by Glassdoor.com listing 24 companies that were 'hiring like crazy in August.' I love the mission statement of Qualtrics; I completely agree that superior experiences transform what would otherwise be just a customer, or employee, or brand into fanatical, ambassadorial, fantastical statuses. The key, as you have identified, is to constantly assess those experiences, so you can improve them. I've worked in companies that could sometimes make that experience, but never knew why - which meant repeating it relied on the same luck that made it happen in the first place. Qualtrics sounds like a great company, and an ideal place to work, and I would love to be considered for a position.</p>
 	  				<br />
 	  				<p>I'm a recent boot camp graduate, passionately persuing a change of careers. While I may not have the 'years' of technical experience, my intense focus and ability to learn new things at lightning speed ensure I am up to the technical task. What sets me apart from others is my background in customer service, sales, and communication. If you're looking for engaged employees, teammates who can communicate and cooperate, who can help and ask for help from others, then you need someone like me.</p>
 	  				<br />
-	  				<p>Your technical list of skills is a near perfect match for the majority of my boot camp training and my capstone project, where I implemented the schedule input, storage, and display module for a time and attendance web app, front-to-back and start-to-finish. I'm willing to build any skill, learn any technology, and work on any part of a project as long as I can be a good, contributing team member and develop solutions to client problems.</p>
 	  				<br />
 	  				<p>I would love an opportunity to discuss this position, at your convenience. Thank you for your time, I'm certain you read through many, many such letters, and appreciate that you read through mine as well!</p>
 	  				<br />
